Fonts extensions in webpack.config and imports in app.js.

--- a/src/styles/Components/Home/Hero/_components.scss
+++ b/src/styles/Components/Home/Hero/_components.scss
@@ -1,3 +1,9 @@
 /*------------------------------------*\
     #COMPONENTS
 \*------------------------------------*/
+
+body {
+    h1 {
+        font-family: $gotham-pro;
+    }
+}
