Rename variables and change image demo.

--- a/src/index.handlebars
+++ b/src/index.handlebars
@@ -16,7 +16,7 @@
         Webpack + BEMIT Workflow
     </h1>
 
-    <img src="./static/img/demo.png" alt="">
+    <img src="./static/img/demo.jpg" alt="" style="width: 450px;">
 
 </body>
 
