--- a/src/styles/Elements/_elements.scss
+++ b/src/styles/Elements/_elements.scss
@@ -13,17 +13,17 @@ h4,
 h5,
 h6 {
   margin: 1rem 0;
-  color: $negro;
+  color: #000000;
 }
 
 p {
   margin: 0.5rem 0;
-  color: $negro;
+  color: #000000;
 }
 
 a {
   text-decoration: none;
-  color: $link;
+  color: #3576e7;
 }
 
 video {
