--- a/src/styles/Components/Global/_nav-demo.scss
+++ b/src/styles/Components/Global/_nav-demo.scss
@@ -1,7 +1,7 @@
 nav {
   width: 100%;
   height: auto;
-  background-color: rgb(247, 89, 89);
+  background-color: mediumturquoise;
 
   ul {
     display: flex;
